--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
   "dependencies": {
     "@hmcts/cookie-manager": "1.0.0",
     "@hmcts/info-provider": "^1.0.0",
-    "@hmcts/nodejs-healthcheck": "^1.7.0",
-    "@hmcts/nodejs-logging": "^3.0.4",
+    "@hmcts/nodejs-healthcheck": "^1.8.0",
+    "@hmcts/nodejs-logging": "^4.0.4",
     "@hmcts/properties-volume": "^0.0.14",
     "@types/config": "^0.0.41",
     "@types/cookie-parser": "^1.4.3",
@@ -94,7 +94,7 @@
     "jest": "^28.1.3",
     "mini-css-extract-plugin": "^2.6.1",
     "nock": "^13.2.9",
-    "sass": "^1.53.0",
+    "node-sass": "^7.0.1",
     "nodemon": "^2.0.19",
     "pa11y": "^6.2.3",
     "puppeteer": "^14.4.1",
