--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -6,5 +6,21 @@
     "aliases": {
       "hmctspublic": "https://hmctspublic.azurecr.io/helm/v1/repo/"
     }
+  },
+  "groupName": "all dependencies",
+  "separateMajorMinor": false,
+  "open-pull-requests-limit": 0,
+  "groupSlug": "all",
+  "packageRules": [
+    {
+      "matchPackagePatterns": [
+        "*"
+      ],
+      "groupName": "all dependencies",
+      "groupSlug": "all"
+    }
+  ],
+  "lockFileMaintenance": {
+    "enabled": false
   }
 }
