--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "fact-frontend",
   "version": "0.0.1",
+  "packageManager": "yarn@3.4.1",
   "private": true,
   "engines": {
     "node": ">=14.0.0"
