--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "sass-lint/merge": ">=2.1.1",
     "uglifyjs-webpack-plugin/serialize-javascript": ">=3.1.0",
     "@hmcts/nodejs-logging/moment": ">=2.29.4",
+    "webpack/terser-webpack-plugin/terser": ">=5.14.2",
     "json5": ">=2.2.2"
   }
 }
