--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start:dev": "nodemon --config nodemon.json",
     "lint": "sass-lint -v -q && eslint . --ext .js,.jsx,.ts,.tsx",
     "build": "yarn webpack --config webpack.config.js",
-    "build:prod": " yarn webpack --mode production --config webpack.config.js",
+    "build:prod": "NODE_ENV=production yarn webpack --mode production --config webpack.config.js",
     "test": "jest",
     "test:coverage": "jest --coverage -c jest.coverage.config.js",
     "test:a11y": "echo 'nope' && exit 0",
@@ -53,7 +53,7 @@
     "express": "^4.18.1",
     "express-nunjucks": "^2.2.5",
     "glob-parent": "6.0.2",
-    "govuk-frontend": "^4.0.1",
+    "govuk-frontend": "4.5.0",
     "helmet": "^4.6.0",
     "http-proxy-middleware": "^2.0.6",
     "i18next": "^21.8.14",
@@ -71,10 +71,8 @@
     "@babel/core": "^7.18.9",
     "@babel/preset-env": "^7.18.9",
     "@types/chai-as-promised": "^7.1.5",
-    "@types/copy-webpack-plugin": "^10.1.0",
     "@types/cucumber": "^6.0.1",
     "@types/jest": "^28.1.6",
-    "@types/mini-css-extract-plugin": "^2.5.1",
     "@types/puppeteer": "^5.4.6",
     "@types/supertest": "^2.0.12",
     "@types/webpack-dev-middleware": "^5.3.0",
@@ -109,27 +107,22 @@
     "ts-jest": "^28.0.7",
     "ts-loader": "^9.3.1",
     "tslint": "^6.1.3",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^5.73.0",
+    "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-middleware": "^5.3.3",
     "webpack-node-externals": "^3.0.0"
   },
   "resolutions": {
     "sass-lint/merge": ">=2.1.1",
-    "sass-lint/eslint/is-my-json-valid/jsonpointer": ">=5.0.0",
-    "sass-lint/eslint/shelljs": ">=0.8.5",
-    "sass-lint/eslint/table/ajv": ">=0.8.5",
-    "sass-lint/gonzales-pe-sl/minimist": ">=1.2.6",
-    "html-webpack-plugin/html-minifier-terser/terser": ">=5.14.2",
     "uglifyjs-webpack-plugin/serialize-javascript": ">=3.1.0",
-    "node-sass/request/http-signatre/jsprim/json-schema": ">=0.4.0",
-    "request/http-signatre/jsprim/json-schema": ">=0.4.0",
-    "webpack/terser-webpack-plugin/terser": ">=5.14.2",
-    "@hmcts/nodejs-healthcheck/@hmcts/nodejs-logging/moment" : ">=2.29.4",
-    "@hmcts/nodejs-logging/moment" : ">=2.29.4",
-    "@hmcts/nodejs-healthcheck/superagent/formidable/qs" : ">=6.9.7",
-    "@hmcts/nodejs-healthcheck/superagent/cookiejar" : ">=2.1.4",
-    "json5": ">=2.2.2"
-  }
+    "@hmcts/nodejs-logging/moment": ">=2.29.4",
+    "babel-loader/loader-utils": ">=2.0.4",
+    "@hmcts/info-provider/express": ">=4.17.3",
+    "qs": ">=6.5.3",
+    "json5": ">=2.2.2",
+    "tsconfig-paths/json5": ">=2.2.2",
+    "express/debug": ">=3.1.0",
+    "body-parser/debug": ">=3.1.0"
+  },
+  "packageManager": "yarn@3.4.1"
 }
