--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cichecks": "yarn && yarn build && yarn lint && yarn test"
   },
   "dependencies": {
+    "@codeceptjs/configure": "^0.10.0",
     "@hmcts/cookie-manager": "1.0.0",
     "@hmcts/info-provider": "^1.0.0",
     "@hmcts/nodejs-healthcheck": "^1.8.0",
@@ -39,7 +40,7 @@
     "@types/http-proxy-middleware": "^1.0.0",
     "@types/i18next": "^13.0.0",
     "@types/lodash": "^4.14.182",
-    "@types/node": "^18.0.6",
+    "@types/node": "18.13.0",
     "@types/nunjucks": "^3.2.1",
     "@types/require-directory": "^2.1.2",
     "@types/serve-favicon": "^2.5.3",
@@ -47,6 +48,7 @@
     "autobind-decorator": "^2.4.0",
     "awilix": "^7.0.3",
     "axios": "^0.27.2",
+    "codeceptjs": "^3.3.7",
     "config": "^3.3.7",
     "cookie-parser": "^1.4.6",
     "csurf": "^1.11.0",
@@ -63,9 +65,9 @@
     "nunjucks": "^3.2.3",
     "require-directory": "^2.1.1",
     "serve-favicon": "^2.5.0",
-    "ts-node": "^10.9.1",
+    "ts-node": "10.9.1",
     "tsconfig-paths": "^4.0.0",
-    "typescript": "^4.7.4"
+    "typescript": "4.9.5"
   },
   "devDependencies": {
     "@babel/core": "^7.18.9",
@@ -126,7 +128,7 @@
     "node-sass/request/http-signatre/jsprim/json-schema": ">=0.4.0",
     "request/http-signatre/jsprim/json-schema": ">=0.4.0",
     "webpack/terser-webpack-plugin/terser": ">=5.14.2",
-    "@hmcts/nodejs-healthcheck/@hmcts/nodejs-logging/moment" : ">=2.29.4",
-    "@hmcts/nodejs-logging/moment" : ">=2.29.4"
+    "@hmcts/nodejs-healthcheck/@hmcts/nodejs-logging/moment": ">=2.29.4",
+    "@hmcts/nodejs-logging/moment": ">=2.29.4"
   }
 }
