--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,10 @@ npm-debug.log.*
 dist/
 public/
 /coverage/
+
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
