--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "test:coverage": "jest --coverage -c jest.coverage.config.js",
     "test:a11y": "echo 'nope' && exit 0",
     "test:pa11y": "NODE_TLS_REJECT_UNAUTHORIZED=0 jest -c jest.a11y.config.js --maxWorkers 15",
-    "test:cucumber": "NODE_TLS_REJECT_UNAUTHORIZED=0 cucumber-js --parallel=8 --retry 5",
     "sonar-scan": "sonar-scanner",
     "fortifyScan": "./java/gradlew -p java fortifyScan",
     "test:smoke": "jest -c jest.smoke.config.js",
-    "test:functional": "NODE_TLS_REJECT_UNAUTHORIZED=0 codeceptjs --config ./src/test/functional/codecept.conf.js run --steps",
+    "test:functional": "yarn test:codecept",
+    "test:codecept": "NODE_TLS_REJECT_UNAUTHORIZED=0 codeceptjs --config ./src/test/functional/codecept.conf.js run-workers 8 parallel",
     "stub:api": "ts-node -r tsconfig-paths/register api/fact-api-stubs.ts",
     "cichecks": "yarn && yarn build && yarn lint && yarn test"
   },
