--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "sonar-scan": "sonar-scanner",
     "fortifyScan": "./java/gradlew -p java fortifyScan",
     "test:smoke": "jest -c jest.smoke.config.js",
-    "test:functional": "yarn test:codecept && yarn test:pa11y",
+    "test:functional": "yarn test:codecept && yarn test:functional:report && yarn test:pa11y",
+    "test:functional:report": "allure generate functional-output/functional/reports/ -c -o functional-output/functional/allure",
     "test:codecept": "NODE_TLS_REJECT_UNAUTHORIZED=0 codeceptjs --config ./src/test/functional/codecept.conf.js run-workers 8 parallel",
     "stub:api": "ts-node -r tsconfig-paths/register api/fact-api-stubs.ts",
     "cichecks": "yarn && yarn build && yarn lint && yarn test"
@@ -73,6 +74,8 @@
   "devDependencies": {
     "@babel/core": "^7.18.9",
     "@babel/preset-env": "^7.18.9",
+    "@codeceptjs/allure-legacy": "^1.0.2",
+    "@playwright/test": "^1.32.1",
     "@types/chai-as-promised": "^7.1.5",
     "@types/cucumber": "^6.0.1",
     "@types/jest": "^28.1.6",
@@ -81,6 +84,8 @@
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/eslint-plugin-tslint": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
+    "allure-commandline": "^2.21.0",
+    "allure-playwright": "^2.1.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.5",
     "chai": "^4.3.6",
