--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "sonar-scan": "sonar-scanner",
     "fortifyScan": "./java/gradlew -p java fortifyScan",
     "test:smoke": "jest -c jest.smoke.config.js",
-    "test:functional": "yarn test:codecept && yarn test:functional:report && yarn test:pa11y",
+    "test:functionall": "npm-run-all -scl test:codecept test:functional:report test:pa11y",
+    "test:functional": "yarn test:codecept & yarn test:pa11y & yarn test:functional:report",
     "test:functional:report": "allure generate functional-output/functional/reports/ -c -o functional-output/functional/allure",
-    "test:codecept": "NODE_TLS_REJECT_UNAUTHORIZED=0 codeceptjs --config ./src/test/functional/codecept.conf.js run-workers 8 parallel",
+    "test:codecept": "NODE_TLS_REJECT_UNAUTHORIZED=0 codeceptjs --config ./src/test/functional/codecept.conf.js run-workers 4 parallel",
     "stub:api": "ts-node -r tsconfig-paths/register api/fact-api-stubs.ts",
     "cichecks": "yarn && yarn build && yarn lint && yarn test"
   },
@@ -101,6 +102,7 @@
     "nock": "^13.2.9",
     "node-sass": "^7.0.1",
     "nodemon": "^2.0.19",
+    "npm-run-all": "^4.1.5",
     "pa11y": "^6.2.3",
     "request": "^2.88.2",
     "sass-lint": "^1.13.1",
