--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "dependencies": {
     "@codeceptjs/configure": "^0.10.0",
     "@hmcts/cookie-manager": "1.0.0",
-    "@hmcts/info-provider": "^1.0.0",
+    "@hmcts/info-provider": "^1.1.0",
     "@hmcts/nodejs-healthcheck": "^1.8.0",
     "@hmcts/nodejs-logging": "^4.0.4",
     "@hmcts/properties-volume": "^0.0.14",
@@ -68,7 +68,7 @@
     "require-directory": "^2.1.1",
     "serve-favicon": "^2.5.0",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.1.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
@@ -87,7 +87,8 @@
     "allure-commandline": "^2.21.0",
     "allure-playwright": "^2.1.0",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.5",
+    "babel-loader": "^9.1.2",
+    "body-parser": "^1.20.2",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "copy-webpack-plugin": "^11.0.0",
@@ -123,13 +124,8 @@
     "sass-lint/merge": ">=2.1.1",
     "uglifyjs-webpack-plugin/serialize-javascript": ">=3.1.0",
     "@hmcts/nodejs-logging/moment": ">=2.29.4",
-    "babel-loader/loader-utils": ">=2.0.4",
-    "@hmcts/info-provider/express": ">=4.17.3",
     "qs": ">=6.5.3",
-    "json5": ">=2.2.2",
-    "tsconfig-paths/json5": ">=2.2.2",
-    "express/debug": ">=3.1.0",
-    "body-parser/debug": ">=3.1.0"
+    "json5": ">=2.2.2"
   },
   "packageManager": "yarn@3.4.1"
 }
