--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "i18next-http-middleware": "^3.2.1",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
-    "nunjucks": "^3.2.3",
+    "nunjucks": ">=3.2.4",
     "playwright": "^1.30.0",
     "require-directory": "^2.1.1",
     "serve-favicon": "^2.5.0",
@@ -88,6 +88,7 @@
     "allure-playwright": "^2.1.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^9.1.2",
+    "body-parser": "^1.20.2",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "copy-webpack-plugin": "^11.0.0",
@@ -117,8 +118,7 @@
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-middleware": "^5.3.3",
-    "webpack-node-externals": "^3.0.0",
-    "body-parser": "^1.20.2"
+    "webpack-node-externals": "^3.0.0"
   },
   "resolutions": {
     "sass-lint/merge": ">=2.1.1",
