--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "dependencies": {
     "@codeceptjs/configure": "^0.10.0",
     "@hmcts/cookie-manager": "1.0.0",
-    "@hmcts/info-provider": "^1.1.0",
+    "@hmcts/info-provider": "^1.0.0",
     "@hmcts/nodejs-healthcheck": "^1.8.0",
     "@hmcts/nodejs-logging": "^4.0.4",
     "@hmcts/properties-volume": "^0.0.14",
@@ -123,6 +123,7 @@
   "resolutions": {
     "sass-lint/merge": ">=2.1.1",
     "uglifyjs-webpack-plugin/serialize-javascript": ">=3.1.0",
+    "@hmcts/info-provider/express": ">=4.17.3",
     "@hmcts/nodejs-logging/moment": ">=2.29.4",
     "qs": ">=6.5.3",
     "json5": ">=2.2.2"
