--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "engines": {
-    "node": "14.19.1"
+    "node": ">=16.0.0"
   },
   "scripts": {
     "start": "NODE_ENV=production ./node_modules/.bin/ts-node -r tsconfig-paths/register src/main/server.ts",
@@ -88,7 +88,6 @@
     "allure-playwright": "^2.1.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^9.1.2",
-    "body-parser": "^1.20.2",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "copy-webpack-plugin": "^11.0.0",
@@ -125,7 +124,8 @@
     "uglifyjs-webpack-plugin/serialize-javascript": ">=3.1.0",
     "@hmcts/nodejs-logging/moment": ">=2.29.4",
     "qs": ">=6.5.3",
-    "json5": ">=2.2.2"
+    "json5": ">=2.2.2",
+    "body-parser/debug": ">=3.1.0"
   },
   "packageManager": "yarn@3.4.1"
 }
