--- a/package.json
+++ b/package.json
@@ -99,11 +99,11 @@
     "jest": "^28.1.3",
     "mini-css-extract-plugin": "^2.6.1",
     "nock": "^13.2.9",
-    "node-sass": "^7.0.1",
     "nodemon": "^2.0.19",
     "npm-run-all": "^4.1.5",
     "pa11y": "^6.2.3",
     "request": "^2.88.2",
+    "sass": "^1.69.4",
     "sass-lint": "^1.13.1",
     "sass-loader": "^13.0.2",
     "sinon": "^14.0.0",
