--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:smoke": "jest -c jest.smoke.config.js",
     "test:functional": "npm-run-all -scl test:codecept test:functional:report test:pa11y",
     "test:functional:report": "allure generate functional-output/functional/reports/ -c -o functional-output/functional/allure",
-    "test:codecept": "NODE_TLS_REJECT_UNAUTHORIZED=0 codeceptjs --config ./src/test/functional/codecept.conf.js run-workers 4 parallel",
+    "test:codecept": "NODE_TLS_REJECT_UNAUTHORIZED=0 codeceptjs run-workers 4 parallel --config ./src/test/functional/codecept.conf.js",
     "stub:api": "ts-node -r tsconfig-paths/register api/fact-api-stubs.ts",
     "cichecks": "yarn && yarn build && yarn lint && yarn test"
   },
