--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ functional-output
 src/main/public/img/lib/*
 src/main/public/js/lib/**/*.js
 src/main/public/stylesheets/lib/*
+src/main/views/govuk
 
 node-rpm-packaging/
 mochawesome-report/
@@ -27,9 +28,14 @@ dist/
 public/
 /coverage/
 
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
+# yarn v2
+ .yarn/*
+ .yarn/build-state.yml
+ .yarn/install-state.gz
+ .pnp.*
+
+ # yarn v2 zero-install
+ !.pnp.cjs
+ !.yarn/unplugged
+ !.yarn/plugins
+ !.yarn/cache
