--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@babel/core": "^7.18.9",
     "@babel/preset-env": "^7.18.9",
     "@codeceptjs/allure-legacy": "^1.0.2",
+    "@codeceptjs/configure": "^0.10.0",
     "@playwright/test": "^1.32.1",
     "@types/chai-as-promised": "^7.1.5",
     "@types/cucumber": "^6.0.1",
@@ -93,6 +94,7 @@
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "cucumber": "^6.0.7",
+    "debug": "^4.3.4",
     "eslint": "^8.20.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^28.1.3",
@@ -110,7 +112,7 @@
     "sinon-chai": "^3.7.0",
     "sonar-scanner": "^3.1.0",
     "style-loader": "^3.3.1",
-    "supertest": "^6.2.4",
+    "superagent": "^8.1.2",
     "ts-jest": "^28.0.7",
     "ts-loader": "^9.3.1",
     "tslint": "^6.1.3",
