--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
     "typescript": "^4.7.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.9",
+    "@babel/core": "^7.23.6",
+    "@babel/eslint-parser": "^7.23.3",
     "@babel/preset-env": "^7.18.9",
     "@codeceptjs/allure-legacy": "^1.0.2",
     "@codeceptjs/configure": "^0.10.0",
@@ -85,7 +86,6 @@
     "@typescript-eslint/parser": "^5.30.7",
     "allure-commandline": "^2.21.0",
     "allure-playwright": "^2.1.0",
-    "babel-eslint": "^10.1.0",
     "babel-loader": "^9.1.2",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
@@ -95,7 +95,7 @@
     "css-loader": "^6.7.1",
     "cucumber": "^6.0.7",
     "debug": "^4.3.4",
-    "eslint": "^8.20.0",
+    "eslint": "^8.56.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^28.1.3",
     "mini-css-extract-plugin": "^2.6.1",
