--- a/package.json
+++ b/package.json
@@ -81,9 +81,9 @@
     "@types/jest": "^29.5.6",
     "@types/supertest": "^2.0.12",
     "@types/webpack-dev-middleware": "^5.3.0",
-    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/eslint-plugin-tslint": "^5.30.7",
-    "@typescript-eslint/parser": "^5.30.7",
+    "@typescript-eslint/parser": "^6.16.0",
     "allure-commandline": "^2.21.0",
     "allure-playwright": "^2.1.0",
     "babel-loader": "^9.1.2",
@@ -96,6 +96,7 @@
     "cucumber": "^6.0.7",
     "debug": "^4.3.4",
     "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^28.1.3",
     "mini-css-extract-plugin": "^2.6.1",
@@ -115,7 +116,6 @@
     "superagent": "^8.1.2",
     "ts-jest": "^28.0.7",
     "ts-loader": "^9.3.1",
-    "tslint": "^6.1.3",
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-middleware": "^5.3.3",
