--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "csurf": "^1.11.0",
     "express": "^4.18.1",
     "express-nunjucks": "^2.2.5",
+    "flatted": "^3.2.9",
     "glob-parent": "6.0.2",
     "govuk-frontend": "4.5.0",
     "helmet": "^4.6.0",
