--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "@hmcts/properties-volume": "^0.0.14",
     "@types/config": "^0.0.41",
     "@types/cookie-parser": "^1.4.3",
-    "@types/csurf": "^1.11.2",
     "@types/es6-promisify": "^6.0.1",
     "@types/express": "^4.17.13",
     "@types/glob": "^7.2.0",
@@ -49,7 +48,6 @@
     "axios": "^1.6.3",
     "config": "^3.3.7",
     "cookie-parser": "^1.4.6",
-    "csurf": "^1.11.0",
     "express": "^4.18.1",
     "express-nunjucks": "^2.2.5",
     "flatted": "^3.2.9",
@@ -65,6 +63,7 @@
     "nunjucks": ">=3.2.4",
     "require-directory": "^2.1.1",
     "serve-favicon": "^2.5.0",
+    "tiny-csrf": "^1.1.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^4.7.4"
