--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "jquery": "^3.6.0",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
+    "memfs": "^4.6.0",
     "nunjucks": ">=3.2.4",
     "require-directory": "^2.1.1",
     "serve-favicon": "^2.5.0",
