--- a/package.json
+++ b/package.json
@@ -121,10 +121,162 @@
     "sass-lint/merge": ">=2.1.1",
     "uglifyjs-webpack-plugin/serialize-javascript": ">=3.1.0",
     "@hmcts/nodejs-logging/moment": ">=2.29.4",
-    "qs": ">=6.5.3",
+    "qs": "6.11.0",
     "json5": ">=2.2.2",
-    "minimist": ">=1.2.6",
-    "semver": ">=7.5.2"
+    "minimist": "1.2.8",
+    "semver": "7.5.4",
+    "glob-parent": "6.0.2",
+    "js-yaml": "4.1.0",
+    "memfs": "4.6.0",
+    "@codeceptjs/configure": "0.10.0",
+    "chokidar": "3.5.3",
+    "debug": "4.3.4",
+    "eslint": "8.56.0",
+    "playwright": "1.40.1",
+    "superagent": "8.1.2",
+    "@cucumber/cucumber-expressions": "17.0.1",
+    "@cucumber/gherkin": "27.0.0",
+    "@cucumber/messages": "24.0.1",
+    "chalk": "4.1.2",
+    "commander": "10.0.1",
+    "figures": "3.2.0",
+    "glob": "10.3.10",
+    "has-ansi": "4.0.1",
+    "mkdirp": "2.1.6",
+    "progress": "2.0.3",
+    "strip-ansi": "6.0.1",
+    "supports-color": "8.1.1",
+    "tmp": "0.2.1",
+    "type-fest": "4.8.3",
+    "@types/uuid": "9.0.7",
+    "reflect-metadata": "0.2.1",
+    "uuid": "9.0.1",
+    "source-map-support": "0.5.21",
+    "source-map": "0.6.1",
+    "diff": "4.0.2",
+    "tslib": "2.6.2",
+    "ansi-styles": "6.2.1",
+    "color-convert": "2.0.1",
+    "color-name": "1.1.4",
+    "has-flag": "4.0.0",
+    "string-width": "5.1.2",
+    "emoji-regex": "9.2.2",
+    "is-fullwidth-code-point": "3.0.0",
+    "escape-string-regexp": "4.0.0",
+    "minimatch": "9.0.3",
+    "cross-spawn": "7.0.3",
+    "signal-exit": "4.1.0",
+    "path-key": "3.1.1",
+    "shebang-command": "2.0.0",
+    "which": "2.0.2",
+    "shebang-regex": "3.0.0",
+    "wrap-ansi-cjs": "7.0.0",
+    "ansi-regex": "5.0.1",
+    "brace-expansion": "2.0.1",
+    "lru-cache": "10.1.0",
+    "ini": "2.0.0",
+    "find-up": "6.3.0",
+    "read-pkg": "5.2.0",
+    "locate-path": "7.2.0",
+    "path-exists": "5.0.0",
+    "p-locate": "6.0.0",
+    "p-limit": "4.0.0",
+    "parse-json": "5.2.0",
+    "resolve-from": "5.0.0",
+    "yallist": "4.0.0",
+    "rimraf": "3.0.2",
+    "inherits": "2.0.3",
+    "argparse": "2.0.1",
+    "sprintf-js": "1.0.3",
+    "form-data": "4.0.0",
+    "mime": "1.6.0",
+    "readable-stream": "3.6.2",
+    "string_decoder": "1.3.0",
+    "safe-buffer": "5.2.1",
+    "moment": "2.30.1",
+    "@types/mime": "3.0.4",
+    "@azure/core-util": "1.2.0",
+    "https-proxy-agent": "5.0.1",
+    "agent-base": "6.0.2",
+    "acorn": "8.11.2",
+    "cookie": "0.5.0",
+    "path-to-regexp": "0.1.7",
+    "ms": "2.1.2",
+    "es6-promisify": "6.1.0",
+    "readdirp": "3.6.0",
+    "fsevents": "2.3.3",
+    "is-plain-obj": "3.0.0",
+    "arg": "5.0.2",
+    "@jridgewell/trace-mapping": "0.3.20",
+    "strip-bom": "4.0.0",
+    "convert-source-map": "2.0.0",
+    "jsesc": "2.5.2",
+    "globals": "13.24.0",
+    "eslint-visitor-keys": "3.4.3",
+    "eslint-scope": "7.2.2",
+    "estraverse": "5.3.0",
+    "allure-js-commons": "2.10.0",
+    "fs-extra": "8.1.0",
+    "jsonfile": "4.0.0",
+    "playwright-core": "1.40.1",
+    "expect": "29.7.0",
+    "pretty-format": "29.7.0",
+    "@jest/expect-utils": "29.7.0",
+    "jest-get-type": "29.6.3",
+    "jest-matcher-utils": "29.7.0",
+    "jest-message-util": "29.7.0",
+    "jest-util": "29.7.0",
+    "jest-diff": "29.7.0",
+    "diff-sequences": "29.6.3",
+    "@jest/types": "29.6.3",
+    "slash": "4.0.0",
+    "@jest/schemas": "29.6.3",
+    "@sinclair/typebox": "0.27.8",
+    "ignore": "5.3.0",
+    "globby": "13.2.2",
+    "path-type": "4.0.0",
+    "schema-utils": "4.2.0",
+    "pkg-dir": "7.0.0",
+    "yocto-queue": "1.0.0",
+    "ajv": "8.12.0",
+    "ajv-keywords": "5.1.0",
+    "fast-deep-equal": "3.1.3",
+    "json-schema-traverse": "1.0.0",
+    "inquirer": "0.12.0",
+    "ansi-escapes": "4.3.2",
+    "cli-cursor": "2.1.0",
+    "mute-stream": "0.0.7",
+    "run-async": "2.4.1",
+    "restore-cursor": "2.0.0",
+    "onetime": "5.1.2",
+    "mimic-fn": "2.1.0",
+    "nopt": "7.2.0",
+    "abbrev": "2.0.0",
+    "nanoid": "3.3.7",
+    "serialize-javascript": "6.0.0",
+    "strip-json-comments": "3.1.1",
+    "yargs": "17.7.2",
+    "yargs-parser": "21.1.1",
+    "cliui": "8.0.1",
+    "camelcase": "6.3.0",
+    "doctrine": "3.0.0",
+    "espree": "9.6.1",
+    "file-entry-cache": "6.0.1",
+    "levn": "0.4.1",
+    "optionator": "0.9.3",
+    "callsites": "3.1.0",
+    "acorn-jsx": "5.3.2",
+    "flat-cache": "3.2.0",
+    "prelude-ls": "1.2.1",
+    "type-check": "0.4.0",
+    "jest-worker": "28.1.3",
+    "@sinonjs/fake-timers": "10.3.0",
+    "@sinonjs/commons": "3.0.0",
+    "isarray": "2.0.5",
+    "core-util-is": "1.0.3",
+    "extsprintf": "1.4.1",
+    "merge": "2.1.1",
+    "type": "2.7.2"
   },
   "packageManager": "yarn@3.4.1"
 }
