--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "applicationinsights": "^2.3.3",
     "autobind-decorator": "^2.4.0",
     "awilix": "^7.0.3",
-    "axios": "^0.27.2",
+    "axios": "1.6.5",
     "config": "^3.3.7",
     "cookie-parser": "^1.4.6",
     "csurf": "^1.11.0",
@@ -130,5 +130,5 @@
     "minimist": ">=1.2.6",
     "semver": ">=7.5.2"
   },
-  "packageManager": "yarn@3.4.1"
+  "packageManager": "yarn@3.6.4"
 }
