--- a/package.json
+++ b/package.json
@@ -129,7 +129,8 @@
     "json5": ">=2.2.2",
     "minimist": ">=1.2.6",
     "semver": ">=7.5.2",
-    "follow-redirects": ">=1.15.4"
+    "follow-redirects": ">=1.15.4",
+    "word-wrap": ">=1.2.4"
   },
   "packageManager": "yarn@3.6.4"
 }
