--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "express": "^4.18.1",
     "express-nunjucks": "^2.2.5",
     "glob-parent": "6.0.2",
-    "govuk-frontend": "5.1.0",
+    "govuk-frontend": "^4.8.0",
     "helmet": "^4.6.0",
     "http-proxy-middleware": "^2.0.6",
     "i18next": "^21.8.14",
