--- a/package.json
+++ b/package.json
@@ -136,7 +136,8 @@
     "axios>follow-redirects": ">=1.15.4",
     "http-proxy-middleware>http-proxy>follow-redirects": ">=1.15.4",
     "@types/http-proxy-middleware>http-proxy-middleware>http-proxy>follow-redirects": ">=1.15.4",
-    "express": ">=4.19.2"
+    "express": ">=4.19.2",
+    "tar": ">=6.2.1"
   },
   "packageManager": "yarn@3.6.4"
 }
