--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ public/
 # yarn v2
  .yarn/*
  .yarn/build-state.yml
- /.yarn/install-state.gz
+ .yarn/install-state.gz
  .pnp.*
 
  # yarn v2 zero-install
