--- a/docker/database/Dockerfile
+++ b/docker/database/Dockerfile
@@ -1,2 +1,2 @@
-FROM hmctspublic.azurecr.io/imported/postgres:16-alpine
+FROM postgres:11.9-alpine
 COPY create-multiple-postgresql-databases.sh /docker-entrypoint-initdb.d/
