--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "dependencies": {
     "@hmcts/cookie-manager": "1.0.0",
-    "@hmcts/info-provider": "^1.1.0",
+    "@hmcts/info-provider": "^1.2.1",
     "@hmcts/nodejs-healthcheck": "^1.8.4",
     "@hmcts/nodejs-logging": "^4.0.4",
     "@hmcts/properties-volume": "^0.0.14",
@@ -51,7 +51,7 @@
     "config": "^3.3.7",
     "cookie-parser": "^1.4.6",
     "csurf": "^1.11.0",
-    "express": "^4.19.2",
+    "express": "^4.20.0",
     "express-nunjucks": "^2.2.5",
     "glob-parent": "6.0.2",
     "govuk-frontend": "^4.8.0",
@@ -122,6 +122,7 @@
     "webpack-node-externals": "^3.0.0"
   },
   "resolutions": {
+    "axios": ">=1.7.7",
     "sass-lint/merge": ">=2.1.1",
     "uglifyjs-webpack-plugin/serialize-javascript": ">=3.1.0",
     "@hmcts/nodejs-logging/moment": ">=2.29.4",
@@ -131,15 +132,14 @@
     "semver": ">=7.5.2",
     "follow-redirects": ">=1.15.6",
     "word-wrap": ">=1.2.4",
-    "ip": ">=2.0.1",
-    "axios": ">=0.28.0",
-    "axios>follow-redirects": ">=1.15.4",
+    "ip": "https://registry.npmjs.org/neoip/-/neoip-2.1.0.tgz",
     "http-proxy-middleware>http-proxy>follow-redirects": ">=1.15.4",
     "@types/http-proxy-middleware>http-proxy-middleware>http-proxy>follow-redirects": ">=1.15.4",
-    "express": ">=4.19.2",
+    "express": ">=4.20.0",
     "micromatch": ">=4.0.8",
     "tar": ">=6.2.1",
-    "braces": ">=3.0.3"
+    "braces": ">=3.0.3",
+    "axios>follow-redirects": ">=1.15.4"
   },
   "packageManager": "yarn@3.6.4"
 }
