--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "devDependencies": {
     "@playwright/test": "^1.47.2",
-    "@types/node": "^22.6.1"
+    "@types/node": "^22.6.1",
+    "axe-core": "^4.10.0"
   },
   "scripts": {}
 }
