--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,4 +1,3 @@
 # https://help.github.com/en/articles/about-code-owners
 
-* @hmcts/test-leads
-* @hmcts/tcoe-automation
+* @hmcts/test-leads @hmcts/tcoe-automation
