--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "author": "abigailflorence97 <abigail.smith@hmcts.net>",
   "license": "MIT",
   "devDependencies": {
+    "@axe-core/playwright": "^4.10.0",
     "@playwright/test": "^1.47.2",
     "@types/node": "^22.6.1",
-    "axe-core": "^4.10.0"
+    "typescript": "^5.6.2"
   },
-  "scripts": {}
+  "scripts": {
+    "lint": ""
+  },
+  "packageManager": "yarn@4.5.0"
 }
