--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "useDefineForClassFields": false,
     "noEmit": true,
     "allowJs": true,
+    "noImplicitAny": false,
     "outDir": "dist",
   },
   "include":[
