--- a/package.json
+++ b/package.json
@@ -2,22 +2,24 @@
   "name": "tcoe-playwright-example",
   "version": "1.0.0",
   "engines": {
-    "node": ">=22.0.0"
+    "node": ">=20.11.1"
   },
-  "repository": "https://github.com/hmcts/tcoe-playwright-example.git",
-  "author": "abigailflorence97 <abigail.smith@hmcts.net>",
-  "license": "MIT",
+  "type": "module",
   "devDependencies": {
     "@axe-core/playwright": "^4.10.0",
     "@eslint/js": "^9.11.1",
-    "@playwright/test": "^1.47.2",
+    "@playwright/test": "^1.48.2",
     "@types/node": "^22.6.1",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
     "@typescript-eslint/parser": "^8.8.0",
     "eslint": "^9.11.1",
     "eslint-plugin-playwright": "^1.6.2",
+    "get-port": "^7.1.0",
     "globals": "^15.10.0",
-    "playwright-core": "^1.47.2",
+    "lighthouse": "^12.2.1",
+    "playwright": "^1.48.2",
+    "playwright-core": "^1.48.2",
+    "playwright-lighthouse": "^4.0.0",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.8.0"
   },
@@ -32,5 +34,5 @@
     "test:tabletwebkit": "yarn playwright test tests/ --project=tabletwebkit",
     "test:a11y": "yarn playwright test tests/ --grep @a11y --project=chrome"
   },
-  "packageManager": "yarn@4.5.1"
+  "packageManager": "yarn@3.8.6"
 }
