--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,15 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "ES2022",
     "moduleResolution": "node",
-    "target": "es2022",
+    "target": "ES2022",
     "resolveJsonModule": true,
     "allowImportingTsExtensions": true,
+    "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
+    "skipLibCheck": true,
     "useDefineForClassFields": false,
     "noEmit": true,
     "allowJs": true,
