--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
   "scripts": {
     "lint": "yarn tsc -p tsconfig.json && yarn eslint .",
     "setup": "yarn playwright install && yarn playwright install msedge",
-    "test:chrome": "yarn playwright test tests/ --project=chrome",
-    "test:firefox": "yarn playwright test tests/ --project=firefox",
-    "test:webkit": "yarn playwright test tests/ --project=webkit",
-    "test:edge": "yarn playwright test tests/ --project=edge",
-    "test:tabletchrome": "yarn playwright test tests/ --project=tabletchrome",
-    "test:tabletwebkit": "yarn playwright test tests/ --project=tabletwebkit",
+    "test:chrome": "yarn playwright test tests/ --project=chrome --grep-invert='(@a11y)|(@performance)'",
+    "test:firefox": "yarn playwright test tests/ --project=firefox --grep-invert='(@a11y)|(@performance)'",
+    "test:webkit": "yarn playwright test tests/ --project=webkit --grep-invert='(@a11y)|(@performance)'",
+    "test:edge": "yarn playwright test tests/ --project=edge --grep-invert='(@a11y)|(@performance)'",
+    "test:tabletchrome": "yarn playwright test tests/ --project=tabletchrome --grep-invert='(@a11y)|(@performance)'",
+    "test:tabletwebkit": "yarn playwright test tests/ --project=tabletwebkit --grep-invert='(@a11y)|(@performance)'",
     "test:a11y": "yarn playwright test tests/ --grep @a11y --project=chrome"
   },
   "packageManager": "yarn@3.8.6"
