--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@types/chai-as-promised": "^8.0.1",
     "@types/cucumber": "^7.0.3",
     "@types/jest": "^29.5.14",
+    "@types/jest-when": "^3.6.0",
     "@types/supertest": "^2.0.16",
     "@types/webpack-dev-middleware": "^5.3.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
@@ -98,6 +99,7 @@
     "eslint": "^8.57.1",
     "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
+    "jest-when": "^3.6.0",
     "mini-css-extract-plugin": "^2.9.2",
     "nock": "^13.5.5",
     "nodemon": "^2.0.22",
