--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "dependencies": {
     "@hmcts/cookie-manager": "1.0.0",
-    "@hmcts/info-provider": "^1.2.2",
+    "@hmcts/info-provider": "^1.1.0",
     "@hmcts/nodejs-healthcheck": "^1.8.5",
     "@hmcts/nodejs-logging": "^4.0.4",
     "@hmcts/properties-volume": "^1.2.0",
@@ -51,7 +51,7 @@
     "config": "^3.3.12",
     "cookie-parser": "^1.4.7",
     "csurf": "^1.11.0",
-    "express": "4.21.1",
+    "express": "^4.17.17",
     "express-nunjucks": "^3.1.2",
     "glob-parent": "6.0.2",
     "govuk-frontend": "^4.9.0",
@@ -138,11 +138,12 @@
     "axios>follow-redirects": ">=1.15.4",
     "http-proxy-middleware>http-proxy>follow-redirects": ">=1.15.4",
     "@types/http-proxy-middleware>http-proxy-middleware>http-proxy>follow-redirects": ">=1.15.4",
-    "express": "4.21.0",
+    "express": "^4.17.17",
     "micromatch": ">=4.0.8",
     "tar": ">=6.2.1",
     "braces": ">=3.0.3",
-    "cookie": ">=0.7.0"
+    "cookie": ">=0.7.0",
+    "path-to-regexp": "^0.1.12"
   },
   "packageManager": "yarn@3.6.4"
 }
