--- a/package.json
+++ b/package.json
@@ -143,7 +143,7 @@
     "tar": ">=6.2.1",
     "braces": ">=3.0.3",
     "cookie": ">=0.7.0",
-    "path-to-regexp": "0.1.12"
+    "@hmcts/info-provider/path-to-regexp": "0.1.12"
   },
   "packageManager": "yarn@3.6.4"
 }
